# WEBhw_docker_poetry

./: LICENSE
bot/: pyproject.toml
bot/bot/: Dockerfile  help_bot.py  help_bot_classes.py  note.py  notes_class.py  requirements.txt  sorter.py  switcher.py
